--- a/ds_client/src/index.css
+++ b/ds_client/src/index.css
@@ -1,6 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* body {
-  background-color: blue;
-} */
+body {
+  background-color: black;
+}
